# rbxm-rs

./: .gitignore  Cargo.toml  README.md  api.json  build.rs
.github/workflows/: ci.yaml
rbxm-proc/: Cargo.toml
rbxm-proc/src/: lib.rs
src/: lib.rs  model.rs  serde.rs  tree.rs
src/__gen/: classes.rs  enums.rs  instance.rs
src/model/: classes.rs  data.rs  enums.rs  error.rs  instance.rs  property.rs  rbx_model.rs
src/serde/: de.rs  encoding.rs  error.rs  internal.rs  io.rs  ser.rs
src/serde/encoding/: chomp.rs  print.rs
static/: custom.css
