[package]
name = "rbxm"
version = "0.1.3"
authors = ["Rune Tynan <runetynan@gmail.com>"]
edition = "2018"
description = "Reader for Roblox model files"
documentation = "https://docs.rs/rbxm"
readme = "README.md"
repository = "https://github.com/CraftSpider/rbxm-rs"
license = "MIT/Apache-2.0"
keywords = ["roblox", "rbxm"]
categories = ["data-structures", "encoding"]

exclude = [
    "/rbxm-proc/",
    "/examples/",
]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = ["lz4_flex/std"]
mesh-format = []

[dependencies]
rbxm-proc = { version = "0.1.0", path = "./rbxm-proc" }
ghost-cell = "0.2"
slotmap = { version = "1.0", default-features = false }
lz4_flex = { version = "0.9", default-features = false, features = ["safe-decode", "safe-encode"] }
