[package]
name = "rbxm"
version = "0.2.0"
authors = ["Rune Tynan <runetynan@gmail.com>"]
edition = "2021"
description = "Reader for Roblox model files"
documentation = "https://docs.rs/rbxm"
readme = "README.md"
repository = "https://github.com/CraftSpider/rbxm-rs"
license = "MIT/Apache-2.0"
keywords = ["roblox", "rbxm"]
categories = ["data-structures", "encoding"]

exclude = [
    "/rbxm-proc/",
    "/examples/",
]

[package.metadata.docs.rs]
rustdoc-args = ["--all-features", "--cfg", "docsrs"]

[features]
default = ["std"]
# Enable support for features that require the standard library
std = ["lz4_flex/std", "uuid/std"]
# Enable support for features that require the nightly compiler
unstable = []
# Enable understanding of mesh data, instead of treating it as a binary blob
mesh-format = []

[dependencies]
rbxm-proc = { version = "0.1.0", path = "./rbxm-proc" }
slotmap = { version = "1.0", default-features = false }
lz4_flex = { version = "0.9", default-features = false, features = ["safe-decode", "safe-encode"] }
uuid = { version = "0.8", default-features = false }
