[package]
name = "rbxm"
version = "0.3.0"
authors = ["Rune Tynan <runetynan@gmail.com>"]
edition = "2021"
description = "Reader for Roblox model files"
documentation = "https://docs.rs/rbxm"
readme = "README.md"
repository = "https://github.com/CraftSpider/rbxm-rs"
license = "MIT/Apache-2.0"
keywords = ["roblox", "rbxm"]
categories = ["data-structures", "encoding"]

exclude = [
    "/rbxm-proc/",
    "/examples/",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "-e", "./static/custom.css"]

[features]
default = ["std"]
# Enable support for features that require the standard library
std = ["lz4_flex/std", "uuid/std", "num/std"]
# Enable support for features that require the nightly compiler
unstable = []
# Enable understanding of mesh data, instead of treating it as a binary blob
mesh-format = []

[dependencies]
rbxm-proc = { version = "0.2.1", path = "./rbxm-proc" }
slotmap = { version = "1.0", default-features = false }
lz4_flex = { version = "0.9", default-features = false, features = ["safe-decode", "safe-encode"] }
uuid = { version = "1.1", default-features = false }
# Needed for no_std float math
num = { version = "0.4", default-features = false, features = ["libm"] }

[build-dependencies]
convert_case = "0.6"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
